[gd_scene load_steps=6 format=3 uid="uid://cgxtghw0w5wif"]

[ext_resource type="Script" path="res://ritual/RitualDesignUI.gd" id="1_ty8pw"]
[ext_resource type="Script" path="res://ZoomingCamera.gd" id="2_7l8yx"]
[ext_resource type="PackedScene" uid="uid://bkuavt54r1gsw" path="res://ritual/RitualCircle.tscn" id="3_j43sm"]

[sub_resource type="ButtonGroup" id="ButtonGroup_k6nkt"]

[sub_resource type="Gradient" id="Gradient_3qg3a"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.407843)

[node name="RitualDesignUI" type="Node2D"]
script = ExtResource("1_ty8pw")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 0)
script = ExtResource("2_7l8yx")

[node name="UIOverlay" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="UIOverlay"]
offset_right = 364.0
offset_bottom = 58.0

[node name="DragModeContainer" type="HBoxContainer" parent="UIOverlay/PanelContainer"]
layout_mode = 2

[node name="MoveButton" type="Button" parent="UIOverlay/PanelContainer/DragModeContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_k6nkt")
text = "Move"

[node name="ResizeButton" type="Button" parent="UIOverlay/PanelContainer/DragModeContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_k6nkt")
text = "Resize"

[node name="OriginLines" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="OriginLines"]
points = PackedVector2Array(574, 0, 0, 0)
width = 2.0
gradient = SubResource("Gradient_3qg3a")

[node name="Line2D2" type="Line2D" parent="OriginLines"]
rotation = 1.5708
points = PackedVector2Array(574, 0, 0, 0)
width = 2.0
gradient = SubResource("Gradient_3qg3a")

[node name="Line2D3" type="Line2D" parent="OriginLines"]
rotation = 3.14159
points = PackedVector2Array(574, 0, 0, 0)
width = 2.0
gradient = SubResource("Gradient_3qg3a")

[node name="Line2D4" type="Line2D" parent="OriginLines"]
rotation = 4.71239
points = PackedVector2Array(574, 0, 0, 0)
width = 2.0
gradient = SubResource("Gradient_3qg3a")

[node name="RitualCircle" parent="." instance=ExtResource("3_j43sm")]
radius = 50.0

[node name="RitualCircle2" parent="." instance=ExtResource("3_j43sm")]
radius = 350.0

[connection signal="toggled" from="UIOverlay/PanelContainer/DragModeContainer/MoveButton" to="." method="_on_move_button_toggled"]
[connection signal="toggled" from="UIOverlay/PanelContainer/DragModeContainer/ResizeButton" to="." method="_on_resize_button_toggled"]
